# IntroCMakeCourse

./: .gitignore  README.md
checkpoint_0/: CMakeLists.txt  main.cpp
checkpoint_1/: CMakeLists.txt
checkpoint_1/src/: CMakeLists.txt  functionality.hpp
checkpoint_2/exe/: CMakeLists.txt  main.cpp
checkpoint_2/src/: CMakeLists.txt  functionality.cpp
checkpoint_3/: CMakeLists.txt
checkpoint_3/exe/: main.cpp
checkpoint_3/src/: CMakeLists.txt  functionality_eigen.hpp
checkpoint_4/: CMakeLists.txt
checkpoint_4/exe/: CMakeLists.txt  main.cpp
checkpoint_4/src/: CMakeLists.txt
checkpoint_5/: CMakeLists.txt
checkpoint_5/cmake/: CompilerWarnings.cmake
checkpoint_5/exe/: CMakeLists.txt  main.cpp
checkpoint_5/src/: CMakeLists.txt  functionality_eigen.cpp
slides/: CMakeLists.txt  IntroCMakeCourse.md
